United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6926979 should simplify catch_inline_exception
6926979 : should simplify catch_inline_exception

Details
Type:
Bug
Submit Date:
2010-02-16
Status:
Resolved
Updated Date:
2010-09-24
Project Name:
JDK
Resolved Date:
2010-04-21
Component:
hotspot
OS:
solaris_9
Sub-Component:
compiler
CPU:
sparc
Priority:
P4
Resolution:
Fixed
Affected Versions:
hs17
Fixed Versions:
hs18

Related Reports
Backport:
Backport:
Backport:
Backport:

Sub Tasks

Description
we should simplify catch_inline_exceptions to avoid the Action_none uncommon trap.

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-rt/hotspot/rev/fdd57634910e
                                     
2010-04-08
EVALUATION

ChangeSet=http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/fdd57634910e,ChangeRequest=6926979
                                     
2010-03-19
EVALUATION

Simplify it by emitting full subtype checks and allowing catch_call_exceptions to deal with any unloaded classes.
                                     
2010-02-17



Hardware and Software, Engineered to Work Together