6926979: should simplify catch_inline_exception

Reviewed-by: twisti